로그인화면 만들었는데 로그인은 안됨.. ㅎ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">LockScreen</string>
+
+    <string name="login_id">아이디를 입력하여주십시오</string>
+    <string name="login_pw">비밀번호를 입력하여주십시오</string>
+    <string name="login_login">로그인</string>
 </resources>
