--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="login_id">아이디를 입력하여주십시오</string>
     <string name="login_pw">비밀번호를 입력하여주십시오</string>
     <string name="login_login">로그인</string>
+
+    <string name="memo_additemtext">할일을 작성해보세요</string>
 </resources>
